--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "DARKZONE-MD",
+  "name": "DUA-MD",
   "version": "4.5.0",
-  "description": "A WhatsApp Bot Created By 𝐸𝑅𝐹𝒜𝒩 𝒜𝐻𝑀𝒜𝒟 🤕",
+  "description": "A WhatsApp Bot Created By DUA FATIMA 🤕",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name DARKZONE-MD",
-    "stop": "pm2 stop DARKZONE-MD",
-    "restart": "pm2 restart DARKZONE-MD"
+    "start": "pm2 start index.js --deep-monitoring --attach --name DUA-MD",
+    "stop": "pm2 stop DUA-MD",
+    "restart": "pm2 restart DUA-MD"
   },
   "dependencies": {
     "@whiskeysockets/baileys":"github:Jeliostarr/DEV-Baileys",
